--- a/assets/sass/05-blocks/utilities/_style.scss
+++ b/assets/sass/05-blocks/utilities/_style.scss
@@ -82,7 +82,7 @@
 		margin-left: var(--global--spacing-horizontal);
 	}
 
-	.entry-content > .alignleft {
+	.entry-content > .alignright {
 		max-width: calc(50% - var(--responsive--alignright-margin));
 	}
 }
