--- a/style.css
+++ b/style.css
@@ -2752,7 +2752,7 @@ table.is-style-stripes tbody tr:nth-child(odd),
 		/*rtl:ignore*/
 		margin-left: var(--global--spacing-horizontal);
 	}
-	.entry-content > .alignleft {
+	.entry-content > .alignright {
 		max-width: calc(50% - var(--responsive--alignright-margin));
 	}
 }
